--- a/website/package.json
+++ b/website/package.json
@@ -8,9 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^0.20.0",
     "bootstrap": "^4.5.2",
+    "cookie": "^0.4.1",
     "next": "9.5.3",
+    "next-connect": "^0.8.1",
     "react": "16.13.1",
+    "react-bootstrap": "^1.3.0",
     "react-dom": "16.13.1",
     "sass": "^1.26.10"
   },
