--- a/website/package.json
+++ b/website/package.json
@@ -13,9 +13,12 @@
     "cookie": "^0.4.1",
     "next": "9.5.3",
     "next-connect": "^0.8.1",
+    "plotly.js": "^1.55.1",
+    "plotly.js-finance-dist": "^1.55.1",
     "react": "16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "16.13.1",
+    "react-plotly.js": "^2.4.0",
     "sass": "^1.26.10"
   },
   "devDependencies": {
